For 1.18.5:
	- Sound and AudioClip nodes should work again - problem with add_first and
	  these nodes.

	- EAI/SAI should be close to working.

For 1.18.4:
	- javascript code that calls perl being rewritten.
		(tests/52 added - uses createVrmlFromURL)

	- bug in OpenGL window size fixed. (affected TouchSensors)

For 1.18.3: Firefox plugin code -at least now it brings FreeWRL up. Have big problem
	with reparenting FreeWRL window - fails at plugin XFlush call.

For 1.18.2:
	- Desktop integration on Linux platforms. (Sarah Dumoulin)

	- more automated build in Makefile.PL (John Stewart) to better handle
	  Motif library inclusion. (including code rewrites in CFrontEnd)

For 1.18.1:
	- more PROTO work for experimental parser (Daniek Kraft)

	- Linux browser plugin reverified; should now work quite well!

	- command line invocation of http:// files restored. (was broken in 1.17).

	- remove requirement for GLwDrawA.h.


For 1.17.7:
	- javascript problem creating some nodes that had FreeWRLPTR defined fields fixed.

For 1.17.6;
	- now scans scientific notation floats correctly.

For 1.17:
	- new menubar operation, can be compiled without it. 

	- shape compiler thread, if supported by OS.

	- strncmp #ifdef deleted from code; made our function the default

	- SAI code changes (modifies EAI and interfaces in Browser.pm)

	- added EAI/SAI *ColorRGBA types

	- much work in making the Perl parser output use the SAI/EAI creation code;
	  this allows for code reduction, and for verification of EAI/SAI process.

For 1.16:
	- VisibilitySensor

	- bug in DirectionalLight rend fixed.

	- bug in script invocation - scripts are now initiated when routing entries
	  are made, not when first invoked.

	- H-Anim nodes being worked on.

	- Geometry2D nodes complete.

	- streamlining build and rendering process by reducing amount of C code in
	  VRMLRend.pm and VRMLC.pm

	- bug in IndexedFaceSet rendering fixed - degenerate triangle finding changed